log
Fri 14 Oct 2022 10:04:17 PM UTC: 
 tests:  0|4
total_score: 0/70
41b8f5b
Fri 14 Oct 2022 10:15:02 PM UTC: 
 heap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
26b88a5
Fri 14 Oct 2022 10:17:08 PM UTC: 
 heap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  2|2
total_score: 20/70
f262ee2
Mon 17 Oct 2022 12:42:40 AM UTC: 
 heap.c | 12 +++++++++++-
 1 file changed, 11 insertions(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:30:36: error: expected ‘;’ before ‘}’ token
   30 |     pq->capac = (pq->capac * 2) + 1
      |                                    ^
      |                                    ;
   31 |   }
      |   ~                                 
heap.c:34:21: error: ‘size’ undeclared (first use in this function)
   34 |   if(!pq->heapArray[size + i]) {
      |                     ^~~~
heap.c:34:21: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
502ed41
Mon 17 Oct 2022 12:42:59 AM UTC: 
 heap.c | 6 ++----
 1 file changed, 2 insertions(+), 4 deletions(-)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:33:21: error: ‘size’ undeclared (first use in this function)
   33 |   if(!pq->heapArray[size + 1]) {
      |                     ^~~~
heap.c:33:21: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
f7e1a31
Mon 17 Oct 2022 12:43:14 AM UTC: 
 heap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:33:6: error: wrong type argument to unary exclamation mark
   33 |   if(!pq->heapArray[pq->size + 1]) {
      |      ^
Compilation failed
72efad7
Mon 17 Oct 2022 12:43:28 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:33:34: error: invalid operands to binary == (have ‘heapElem’ {aka ‘struct nodo’} and ‘void *’)
   33 |   if(pq->heapArray[pq->size + 1] == NULL) {
      |      ~~~~~~~~~~~~~~~~~~~~~~~~~~~ ^~
      |                   |
      |                   heapElem {aka struct nodo}
Compilation failed
2c31ebd
Mon 17 Oct 2022 12:43:41 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:33:34: error: invalid operands to binary == (have ‘heapElem’ {aka ‘struct nodo’} and ‘int’)
   33 |   if(pq->heapArray[pq->size + 1] == 0) {
      |      ~~~~~~~~~~~~~~~~~~~~~~~~~~~ ^~
      |                   |
      |                   heapElem {aka struct nodo}
Compilation failed
b9e54cd
Mon 17 Oct 2022 12:44:02 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:33:42: error: ‘MULL’ undeclared (first use in this function); did you mean ‘NULL’?
   33 |   if(pq->heapArray[pq->size + 1].data == MULL) {
      |                                          ^~~~
      |                                          NULL
heap.c:33:42: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
5fd604a
Mon 17 Oct 2022 12:44:09 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|2
total_score: 20/70
6f6fe12
Mon 17 Oct 2022 12:44:25 AM UTC: 
 heap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  2|2
total_score: 20/70
f09a008
Mon 17 Oct 2022 12:44:54 AM UTC: 
 heap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  3|2
total_score: 25/70
4efa973
Mon 17 Oct 2022 12:50:55 AM UTC: 
 heap.c | 2 --
 1 file changed, 2 deletions(-)
 tests:  3|2
total_score: 25/70
cb64aea
Mon 17 Oct 2022 01:00:12 AM UTC: 
 heap.c | 28 +++++++++++++++++++++++++---
 1 file changed, 25 insertions(+), 3 deletions(-)
In file included from test.c:4:
heap.c:58:1: error: expected identifier or ‘(’ before ‘}’ token
   58 | }
      | ^
Compilation failed
427bf4c
Mon 17 Oct 2022 01:01:16 AM UTC: 
 heap.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  2|2
total_score: 20/70
26a9160
Mon 17 Oct 2022 01:01:38 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|2
total_score: 20/70
be1ee9b
Mon 17 Oct 2022 01:01:46 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|2
total_score: 20/70
c0f9dd1
Mon 17 Oct 2022 01:02:03 AM UTC: 
 heap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|2
total_score: 20/70
232b990
Mon 17 Oct 2022 01:02:27 AM UTC: 
 heap.c | 6 ++----
 1 file changed, 2 insertions(+), 4 deletions(-)
 tests:  3|2
total_score: 25/70
bff7611
Mon 17 Oct 2022 01:03:31 AM UTC: 
 heap.c | 8 +++++---
 1 file changed, 5 insertions(+), 3 deletions(-)
 tests:  3|2
total_score: 25/70
d95e175
Mon 17 Oct 2022 01:03:38 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|2
total_score: 20/70
25fcc74
Mon 17 Oct 2022 01:03:45 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:33:16: error: initialization of ‘int *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
   33 |   int * hijo = pq->size;
      |                ^~
heap.c:35:16: error: array subscript is not an integer
   35 |   pq->heapArray[hijo].data = data;
      |                ^
heap.c:36:16: error: array subscript is not an integer
   36 |   pq->heapArray[hijo].priority = priority;
      |                ^
cc1: all warnings being treated as errors
Compilation failed
1a3bd66
Mon 17 Oct 2022 01:04:08 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:33:16: error: cast to pointer from integer of different size [-Werror=int-to-pointer-cast]
   33 |   int * hijo = (int * )pq->size;
      |                ^
heap.c:35:16: error: array subscript is not an integer
   35 |   pq->heapArray[hijo].data = data;
      |                ^
heap.c:36:16: error: array subscript is not an integer
   36 |   pq->heapArray[hijo].priority = priority;
      |                ^
cc1: all warnings being treated as errors
Compilation failed
e6fdd08
Mon 17 Oct 2022 01:05:09 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:33:17: error: initialization of ‘void *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
   33 |   void * hijo = pq->size;
      |                 ^~
heap.c:35:16: error: array subscript is not an integer
   35 |   pq->heapArray[hijo].data = data;
      |                ^
heap.c:36:16: error: array subscript is not an integer
   36 |   pq->heapArray[hijo].priority = priority;
      |                ^
cc1: all warnings being treated as errors
Compilation failed
59dec46
Mon 17 Oct 2022 01:05:39 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|2
total_score: 20/70
0bbe4de
